--- a/src/app/clock/clock.component.html
+++ b/src/app/clock/clock.component.html
@@ -1,9 +1,9 @@
 <div class="clock">
     <div class="rotatedNumberContainer"
         *ngFor="let no of clockNumbers"
-        [style.transform]="'rotate('+ getDegreeForNumber(no) + 'deg)'">
+        [style.webkitTransform]="'rotate('+ getDegreeForNumber(no) + 'deg)'">
         <div class="numberContainer" 
-            [style.transform]="'rotate('+ getDegreeForNumber(no * -1) + 'deg)'">
+            [style.webkitTransform]="'rotate('+ getDegreeForNumber(no * -1) + 'deg)'">
             {{no}}
         </div>
     </div>
